Added the docs for the register route
